Navbar overlaping issue fixed

--- a/src/Component/Header/Header.scss
+++ b/src/Component/Header/Header.scss
@@ -128,7 +128,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: start;
+  align-items: flex-start;
   width: 16rem;
   height: 100%;
   background-color: var(--deep-navy);
