--- a/src/Pages/Houses/Houses.scss
+++ b/src/Pages/Houses/Houses.scss
@@ -1,6 +1,3 @@
-.products__container-nav {
-  background-color: var(--deep-orange);
-}
 .products__container-sub {
   margin-top: 4rem;
   width: 100%;
