--- a/src/Pages/Login/Login.scss
+++ b/src/Pages/Login/Login.scss
@@ -1,6 +1,3 @@
-.form__container-nav {
-  background-color: var(--deep-orange);
-}
 .form__container {
   width: 100%;
   display: flex;
